Update ModelComparison Example

--- a/examples/notebooks/ModelComparison.ipynb
+++ b/examples/notebooks/ModelComparison.ipynb
@@ -157,39 +157,32 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>messages</th>\n",
-       "      <th>response(s)</th>\n",
-       "      <th>latency</th>\n",
        "      <th>model</th>\n",
+       "      <th>response</th>\n",
+       "      <th>latency</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>[{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who won the world series in 2020?'}]</td>\n",
-       "      <td>George Washington</td>\n",
-       "      <td>0.000006</td>\n",
        "      <td>gpt-3.5-turbo</td>\n",
+       "      <td>George Washington</td>\n",
+       "      <td>0.000004</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>[{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who won the world series in 2020?'}]</td>\n",
-       "      <td>George Washington</td>\n",
-       "      <td>0.000004</td>\n",
        "      <td>gpt-3.5-turbo-0613</td>\n",
+       "      <td>George Washington</td>\n",
+       "      <td>0.000001</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                                                                                            messages  \\\n",
-       "0  [{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who won the world series in 2020?'}]   \n",
-       "1  [{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who won the world series in 2020?'}]   \n",
-       "\n",
-       "         response(s)   latency               model  \n",
-       "0  George Washington  0.000006  gpt-3.5-turbo       \n",
-       "1  George Washington  0.000004  gpt-3.5-turbo-0613  "
+       "                model           response   latency\n",
+       "0  gpt-3.5-turbo       George Washington  0.000004\n",
+       "1  gpt-3.5-turbo-0613  George Washington  0.000001"
       ]
      },
      "metadata": {},
@@ -232,70 +225,10 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2f62fdfea6b540059a496e977dd8dfbe",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "GridBox(children=(Label(value='Input'), Label(value='gpt-3.5-turbo'), Label(value='gpt-3.5-turbo-0613'), Label…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>gpt-3.5-turbo</th>\n",
-       "      <th>feedback</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>[{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who won the world series in 2020?'}]</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                                                                                       gpt-3.5-turbo  \\\n",
-       "0  [{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who won the world series in 2020?'}]   \n",
-       "\n",
-       "   feedback  \n",
-       "0  0         "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "harness.compare()"
+    "# This is disabled for now, please reach out if you would like to use this\n",
+    "# harness.compare()"
    ]
   },
   {
