Update AutoEval example

--- a/examples/notebooks/AutoEval.ipynb
+++ b/examples/notebooks/AutoEval.ipynb
@@ -261,7 +261,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from prompttools.utils import autoeval"
+    "from prompttools.utils import autoeval_binary_scoring"
    ]
   },
   {
@@ -363,7 +363,7 @@
     }
    ],
    "source": [
-    "experiment.evaluate(\"followed_directions\", autoeval.evaluate)\n",
+    "experiment.evaluate(\"followed_directions\", autoeval_binary_scoring, {\"prompt_column_name\": \"prompt\"})\n",
     "experiment.visualize()"
    ]
   },
