--- a/examples/notebooks/MindsDBExperiment.ipynb
+++ b/examples/notebooks/MindsDBExperiment.ipynb
@@ -131,7 +131,7 @@
     "\n",
     "from prompttools.utils import similarity\n",
     "\n",
-    "experiment.evaluate(\"similar_to_expected\", similarity.evaluate, expected=\"George Washington\")\n",
+    "experiment.evaluate(\"similar_to_expected\", semantic_similarity, expected=[\"George Washington\"] * 1)\n",
     "\n",
     "experiment.visualize()"
    ]
@@ -153,7 +153,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.4"
   },
   "vscode": {
    "interpreter": {
