Update Llama Comparisons

--- a/examples/notebooks/LlamaHeadToHead.ipynb
+++ b/examples/notebooks/LlamaHeadToHead.ipynb
@@ -285,12 +285,13 @@
     "    return [choice[\"text\"] for choice in output[\"choices\"]]\n",
     "\n",
     "\n",
-    "def use_gpt4(prompt: str, results: Dict, metadata: Dict) -> float:\n",
+    "def use_gpt4(row: \"pandas.core.series.Series\") -> float:\n",
     "    \"\"\"\n",
     "    A simple test that checks semantic similarity between the user input\n",
     "    and the model's text responses.\n",
     "    \"\"\"\n",
-    "    distances = [autoeval.compute(prompt, response) for response in extract_responses(results)]\n",
+    "    prompt = row[\"prompt\"]\n",
+    "    distances = [autoeval.compute(prompt, response) for response in row[\"response(s)\"]]\n",
     "    return min(distances)"
    ]
   },
