--- a/examples/notebooks/GPT4vsLlama2.ipynb
+++ b/examples/notebooks/GPT4vsLlama2.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "0a13ddc8",
    "metadata": {},
@@ -10,7 +9,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "780dc3bf",
    "metadata": {},
@@ -21,7 +19,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "623f0cfe",
    "metadata": {},
@@ -30,7 +27,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "52881369",
    "metadata": {},
@@ -49,7 +45,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "2eac35f8",
    "metadata": {},
@@ -58,7 +53,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "5edba05a",
    "metadata": {},
@@ -80,7 +74,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "842f1e47",
    "metadata": {},
@@ -103,7 +96,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "622dea9a",
    "metadata": {},
@@ -112,7 +104,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "0cd0bae8",
    "metadata": {},
@@ -164,7 +155,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "3babfe5a",
    "metadata": {},
@@ -200,7 +190,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "6c3162e6",
    "metadata": {},
@@ -282,7 +271,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "2ceb662a",
    "metadata": {},
@@ -307,17 +295,17 @@
     "        return [choice[\"message\"][\"content\"] for choice in output[\"choices\"]]\n",
     "\n",
     "\n",
-    "def use_gpt4(prompt: str, results: Dict, metadata: Dict) -> float:\n",
+    "def use_gpt4(row: \"pandas.core.series.Series\") -> float:\n",
     "    \"\"\"\n",
     "    A simple test that checks semantic similarity between the user input\n",
     "    and the model's text responses.\n",
     "    \"\"\"\n",
-    "    distances = [autoeval.compute(prompt, response) for response in extract_responses(results)]\n",
+    "    prompt = row[\"prompt\"]\n",
+    "    distances = [autoeval.compute(prompt, response) for response in row[\"response(s)\"]]\n",
     "    return min(distances)"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "974d6065",
    "metadata": {},
@@ -572,7 +560,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "36fa7a07",
    "metadata": {},
