Update HF and Llama examples

--- a/examples/notebooks/HuggingFaceHub.ipynb
+++ b/examples/notebooks/HuggingFaceHub.ipynb
@@ -149,7 +149,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from prompttools.utils import similarity"
+    "from prompttools.utils import semantic_similarity"
    ]
   },
   {
@@ -161,7 +161,7 @@
    },
    "outputs": [],
    "source": [
-    "experiment.evaluate(\"similar_to_expected\", similarity.evaluate, expected=\"George Washington\")"
+    "experiment.evaluate(\"similar_to_expected\", semantic_similarity, expected=[\"George Washington\"] * 4)"
    ]
   },
   {
