--- a/examples/notebooks/HumanFeedback.ipynb
+++ b/examples/notebooks/HumanFeedback.ipynb
@@ -10,6 +10,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2da96d1d",
+   "metadata": {},
+   "source": [
+    "We have temporarily disabled the manual human feedback feature. Please open an issue or ping us on Discord if you would like to use this."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "08def965",
    "metadata": {},
    "source": [
