--- a/examples/notebooks/LlamaCppExperiment.ipynb
+++ b/examples/notebooks/LlamaCppExperiment.ipynb
@@ -237,7 +237,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from prompttools.utils import similarity"
+    "from prompttools.utils import semantic_similarity"
    ]
   },
   {
@@ -249,7 +249,7 @@
    },
    "outputs": [],
    "source": [
-    "experiment.evaluate(\"similar_to_expected\", similarity.evaluate, expected=\"George Washington\")"
+    "experiment.evaluate(\"similar_to_expected\", semantic_similarity, expected=[\"George Washington\"] * 8)"
    ]
   },
   {
