--- a/examples/notebooks/WeaviateExperiment.ipynb
+++ b/examples/notebooks/WeaviateExperiment.ipynb
@@ -24,7 +24,7 @@
    "outputs": [],
    "source": [
     "# !pip install --quiet --force-reinstall prompttools\n",
-    "!pip install weaviate-client"
+    "# !pip install weaviate-client"
    ]
   },
   {
@@ -215,7 +215,20 @@
    "execution_count": 6,
    "id": "9db6b381",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/kevin/miniconda3/envs/prompttools/lib/python3.11/site-packages/google/rpc/__init__.py:20: DeprecationWarning: Deprecated call to `pkg_resources.declare_namespace('google.rpc')`.\n",
+      "Implementing implicit namespace packages (as specified in PEP 420) is preferred to `pkg_resources.declare_namespace`. See https://setuptools.pypa.io/en/latest/references/keywords.html#keyword-namespace-packages\n",
+      "  pkg_resources.declare_namespace(__name__)\n",
+      "/Users/kevin/miniconda3/envs/prompttools/lib/python3.11/site-packages/pkg_resources/__init__.py:2349: DeprecationWarning: Deprecated call to `pkg_resources.declare_namespace('google')`.\n",
+      "Implementing implicit namespace packages (as specified in PEP 420) is preferred to `pkg_resources.declare_namespace`. See https://setuptools.pypa.io/en/latest/references/keywords.html#keyword-namespace-packages\n",
+      "  declare_namespace(parent)\n"
+     ]
+    }
+   ],
    "source": [
     "from prompttools.experiment import WeaviateExperiment\n",
     "\n",
@@ -447,7 +460,7 @@
     "    text_queries=text_queries,\n",
     "    vectorizers_and_moduleConfigs=vectorizers_and_moduleConfigs,\n",
     "    property_definitions=property_definitions,\n",
-    "    data_objs=data,\n",
+    "    data_objects=data,\n",
     "    distance_metrics=distance_metrics,\n",
     ")\n",
     "experiment.run()"
@@ -481,7 +494,6 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>vectorIndexConfig</th>\n",
-       "      <th>text_query</th>\n",
        "      <th>top objs</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -489,13 +501,11 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>{'vectorIndexConfig': {'distance': 'cosine'}}</td>\n",
-       "      <td>continent Asia</td>\n",
        "      <td>[{'answer': 'Asia', 'question': 'Which continent is China in?'}, {'answer': 'Asia', 'question': 'Which continent is India in?'}, {'answer': 'North America', 'question': 'Which continent is USA in?'}]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>{'vectorIndexConfig': {'distance': 'l2-squared'}}</td>\n",
-       "      <td>continent Asia</td>\n",
        "      <td>[{'answer': 'Asia', 'question': 'Which continent is China in?'}, {'answer': 'Asia', 'question': 'Which continent is India in?'}, {'answer': 'North America', 'question': 'Which continent is USA in?'}]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -503,9 +513,9 @@
        "</div>"
       ],
       "text/plain": [
-       "                                   vectorIndexConfig      text_query  \\\n",
-       "0  {'vectorIndexConfig': {'distance': 'cosine'}}      continent Asia   \n",
-       "1  {'vectorIndexConfig': {'distance': 'l2-squared'}}  continent Asia   \n",
+       "                                   vectorIndexConfig  \\\n",
+       "0  {'vectorIndexConfig': {'distance': 'cosine'}}       \n",
+       "1  {'vectorIndexConfig': {'distance': 'l2-squared'}}   \n",
        "\n",
        "                                                                                                                                                                                                  top objs  \n",
        "0  [{'answer': 'Asia', 'question': 'Which continent is China in?'}, {'answer': 'Asia', 'question': 'Which continent is India in?'}, {'answer': 'North America', 'question': 'Which continent is USA in?'}]  \n",
@@ -530,7 +540,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "974d6065",
+   "id": "21f03398",
    "metadata": {},
    "source": [
     "For now, please refer to the ChromaDB example for possible evaluation methods (i.e. ranking correlation). Other examples show case how you can evaluate with LLMs."
