Fix link sharing

--- a/examples/notebooks/GPT4RegressionTesting.ipynb
+++ b/examples/notebooks/GPT4RegressionTesting.ipynb
@@ -222,7 +222,9 @@
    },
    "outputs": [],
    "source": [
-    "openai_experiment.evaluate(\"auto-evaluation\", autoeval_from_expected_response, {\"prompt_column_name\": \"messages\"}, expected=[\"YES\", \"NO\"] * 12)"
+    "openai_experiment.evaluate(\n",
+    "    \"auto-evaluation\", autoeval_from_expected_response, {\"prompt_column_name\": \"messages\"}, expected=[\"YES\", \"NO\"] * 12\n",
+    ")"
    ]
   },
   {
