Lang Chain Router Chain Experiment

--- a/examples/notebooks/MindsDBExperiment.ipynb
+++ b/examples/notebooks/MindsDBExperiment.ipynb
@@ -104,6 +104,7 @@
    "source": [
     "import mysql.connector\n",
     "from prompttools.experiment import MindsDBExperiment\n",
+    "from prompttools.utils import semantic_similarity\n",
     "\n",
     "\n",
     "db = mysql.connector.connect(host=\"cloud.mindsdb.com\", user=\"user\", password=\"password\", port=\"3306\")\n",
