Fixing a few examples and replace Union type to allow 3.10 usage

--- a/examples/notebooks/LangChainSequentialChainExperiment.ipynb
+++ b/examples/notebooks/LangChainSequentialChainExperiment.ipynb
@@ -18,24 +18,24 @@
      "text": [
       "\n",
       "\n",
-      "\u001b[1m> Entering new SequentialChain chain...\u001b[0m\n",
+      "\u001B[1m> Entering new SequentialChain chain...\u001B[0m\n",
       "\n",
-      "\u001b[1m> Finished chain.\u001b[0m\n",
-      "\n",
-      "\n",
-      "\u001b[1m> Entering new SequentialChain chain...\u001b[0m\n",
-      "\n",
-      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "\u001B[1m> Finished chain.\u001B[0m\n",
       "\n",
       "\n",
-      "\u001b[1m> Entering new SequentialChain chain...\u001b[0m\n",
+      "\u001B[1m> Entering new SequentialChain chain...\u001B[0m\n",
       "\n",
-      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "\u001B[1m> Finished chain.\u001B[0m\n",
       "\n",
       "\n",
-      "\u001b[1m> Entering new SequentialChain chain...\u001b[0m\n",
+      "\u001B[1m> Entering new SequentialChain chain...\u001B[0m\n",
       "\n",
-      "\u001b[1m> Finished chain.\u001b[0m\n"
+      "\u001B[1m> Finished chain.\u001B[0m\n",
+      "\n",
+      "\n",
+      "\u001B[1m> Entering new SequentialChain chain...\u001B[0m\n",
+      "\n",
+      "\u001B[1m> Finished chain.\u001B[0m\n"
      ]
     },
     {
@@ -132,7 +132,7 @@
     "from langchain.chat_models import ChatOpenAI\n",
     "from langchain.prompts import ChatPromptTemplate\n",
     "\n",
-    "from prompttools.utils import similarity\n",
+    "from prompttools.utils import semantic_similarity\n",
     "\n",
     "\n",
     "llm = ChatOpenAI(temperature=0.9)\n",
@@ -167,7 +167,7 @@
     "\n",
     "experiment.run()\n",
     "\n",
-    "experiment.evaluate(\"similar_to_expected\", similarity.evaluate, expected=\"I love to eat shawarma\")\n",
+    "experiment.evaluate(\"similar_to_expected\", semantic_similarity, expected=[\"I love to eat shawarma\"] * 4)\n",
     "\n",
     "experiment.visualize()"
    ]
