--- a/examples/notebooks/OpenAIChatFunctionExperiment.ipynb
+++ b/examples/notebooks/OpenAIChatFunctionExperiment.ipynb
@@ -175,7 +175,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from prompttools.utils import similarity"
+    "from prompttools.utils import semantic_similarity"
    ]
   },
   {
@@ -188,7 +188,7 @@
    "outputs": [],
    "source": [
     "experiment.evaluate(\n",
-    "    \"similar_to_expected\", similarity.evaluate, expected=['{\"location\": \"Toronto, Canada\", \"format\": \"celsius\"}'] * 4\n",
+    "    \"similar_to_expected\", semantic_similarity, expected=['{\"location\": \"Toronto, Canada\", \"format\": \"celsius\"}'] * 4\n",
     ")"
    ]
   },
