Add palm to streamlit

--- a/examples/notebooks/LangChainRouterChainExperiment.ipynb
+++ b/examples/notebooks/LangChainRouterChainExperiment.ipynb
@@ -56,7 +56,7 @@
     "            \"name\": \"restaurant\",\n",
     "            \"description\": \"Good for building a restaurant\",\n",
     "            \"prompt_template\": restaurant_template,\n",
-    "        }\n",
+    "        },\n",
     "    ],\n",
     "]\n",
     "\n",
@@ -77,7 +77,7 @@
     "\n",
     "experiment.evaluate(\"similar_to_expected\", semantic_similarity, expected=[expected] * 2)\n",
     "\n",
-    "experiment.visualize()\n"
+    "experiment.visualize()"
    ]
   }
  ],
