--- a/examples/notebooks/PaLM2Experiment.ipynb
+++ b/examples/notebooks/PaLM2Experiment.ipynb
@@ -80,7 +80,7 @@
     "\n",
     "\n",
     "palm.configure(api_key=os.environ[\"GOOGLE_PALM_API_KEY\"])\n",
-    "[m.name for m in palm.list_models() if 'generateText' in m.supported_generation_methods]"
+    "[m.name for m in palm.list_models() if \"generateText\" in m.supported_generation_methods]"
    ]
   },
   {
@@ -208,7 +208,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from prompttools.utils import semantic_similarity\n"
+    "from prompttools.utils import semantic_similarity"
    ]
   },
   {
