Instructions to download full HellaSwag dataset for benchmarking

--- a/examples/notebooks/benchmark/Benchmarking.ipynb
+++ b/examples/notebooks/benchmark/Benchmarking.ipynb
@@ -22,7 +22,13 @@
     "# ctx_a: The first sentence of the context\n",
     "# ctx_b: The second sentence of the context\n",
     "# dataset: Domain of the question -- e.g. activitynet / wikihow\n",
-    "# ending_options: A list of four ending choices"
+    "# ending_options: A list of four ending choices\n",
+    "\n",
+    "# This repo contains a sample of the HellaSwag dataset \n",
+    "# located under prompttools/data/benchmarking/hellaswag\n",
+    "# To download the full dataset, please visit:\n",
+    "# https://leaderboard.allenai.org/hellaswag/submissions/get-started\n",
+    "# The link to the dataset is ~1/4 down the page"
    ]
   },
   {
