remove openai key

--- a/examples/notebooks/LanceDBExperiment.ipynb
+++ b/examples/notebooks/LanceDBExperiment.ipynb
@@ -81,7 +81,7 @@
     "# Configuring the environment variable OPENAI_API_KEY\n",
     "if \"OPENAI_API_KEY\" not in os.environ:\n",
     "  # OR set the key here as a variable\n",
-    "  openai.api_key = \"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\"\n",
+    "  openai.api_key = \"...\"\n",
     "\n",
     "\n",
     "DEFAULT = SentenceTransformer(\"paraphrase-MiniLM-L3-v2\")\n",
@@ -97,7 +97,9 @@
     "    rs = openai.Embedding.create(input=batch, engine=\"text-embedding-ada-002\")\n",
     "    return [record[\"embedding\"] for record in rs[\"data\"]]\n",
     "\n",
-    "emb_fns = {\"openai-ada-002\": openai_ada2_embed_func, \"minilm_l6\": minilm_l6_embed_func,  \"default\": default_embed_func }"
+    "emb_fns = {\"minilm_l6\": minilm_l6_embed_func,  \"default\": default_embed_func }\n",
+    "# Try with openai\n",
+    "# emb_fns = {\"openai-ada-002\": openai_ada2_embed_func, \"minilm_l6\": minilm_l6_embed_func,  \"default\": default_embed_func }"
    ]
   },
   {
