--- a/examples/notebooks/benchmark/Benchmarking.ipynb
+++ b/examples/notebooks/benchmark/Benchmarking.ipynb
@@ -24,7 +24,7 @@
     "# dataset: Domain of the question -- e.g. activitynet / wikihow\n",
     "# ending_options: A list of four ending choices\n",
     "\n",
-    "# This repo contains a sample of the HellaSwag dataset \n",
+    "# This repo contains a sample of the HellaSwag dataset\n",
     "# located under prompttools/data/benchmarking/hellaswag\n",
     "# To download the full dataset, please visit:\n",
     "# https://leaderboard.allenai.org/hellaswag/submissions/get-started\n",
@@ -70,15 +70,15 @@
     "sample_size = 3\n",
     "\n",
     "data = []\n",
-    "with open('prompttools/data/benchmarking/hellaswag/hellaswag_dataset.jsonl', 'r') as file:\n",
+    "with open(\"prompttools/data/benchmarking/hellaswag/hellaswag_dataset.jsonl\", \"r\") as file:\n",
     "    for line in file:\n",
     "        try:\n",
     "            json_obj = json.loads(line)\n",
-    "            data.append([json_obj['ctx'], json_obj['ending_options']])\n",
+    "            data.append([json_obj[\"ctx\"], json_obj[\"ending_options\"]])\n",
     "        except json.JSONDecodeError:\n",
     "            print(f\"Skipped invalid JSON: {line}\")\n",
     "labels = []\n",
-    "with open('prompttools/data/benchmarking/hellaswag/hellaswag_labels.lst', 'r') as file:\n",
+    "with open(\"prompttools/data/benchmarking/hellaswag/hellaswag_labels.lst\", \"r\") as file:\n",
     "    for line in file:\n",
     "        try:\n",
     "            json_obj = json.loads(line)\n",
@@ -86,13 +86,13 @@
     "        except json.JSONDecodeError:\n",
     "            print(f\"Skipped invalid JSON: {line}\")\n",
     "\n",
-    "hella_swag = pd.DataFrame(data, columns=['ctx', 'ending_options'])\n",
+    "hella_swag = pd.DataFrame(data, columns=[\"ctx\", \"ending_options\"])\n",
     "hella_swag[\"labels\"] = labels\n",
-    "hella_swag = hella_swag.head(sample_size) # sample\n",
+    "hella_swag = hella_swag.head(sample_size)  # sample\n",
     "\n",
-    "sample_ctxs = hella_swag['ctx'].values\n",
-    "sample_ending_options = hella_swag['ending_options'].values\n",
-    "sample_labels = hella_swag['labels'].values"
+    "sample_ctxs = hella_swag[\"ctx\"].values\n",
+    "sample_ending_options = hella_swag[\"ending_options\"].values\n",
+    "sample_labels = hella_swag[\"labels\"].values"
    ]
   },
   {
@@ -132,15 +132,13 @@
     "models = [\"google/flan-t5-xxl\"]\n",
     "prompts = sample_ctxs\n",
     "task = [\"text-generation\"]\n",
-    "google_flan_t5_xxl_experiment = HuggingFaceHubExperiment(\n",
-    "    models, prompts, task, temperature=temperatures\n",
-    ")\n",
+    "google_flan_t5_xxl_experiment = HuggingFaceHubExperiment(models, prompts, task, temperature=temperatures)\n",
     "benchmarking_google_flan_t5_xxl = Benchmark(\n",
     "    experiment=google_flan_t5_xxl_experiment,\n",
     "    eval_method=semantic_similarity,\n",
     "    prompts=sample_ctxs,\n",
     "    response_options=sample_ending_options,\n",
-    "    correct_response_indices=sample_labels\n",
+    "    correct_response_indices=sample_labels,\n",
     ")\n",
     "\n",
     "# Vicuna 7b\n",
@@ -156,7 +154,7 @@
     "    eval_method=semantic_similarity,\n",
     "    prompts=sample_ctxs,\n",
     "    response_options=sample_ending_options,\n",
-    "    correct_response_indices=sample_labels\n",
+    "    correct_response_indices=sample_labels,\n",
     ")\n",
     "\n",
     "# Vicuna 13b\n",
@@ -172,17 +170,12 @@
     "    eval_method=semantic_similarity,\n",
     "    prompts=sample_ctxs,\n",
     "    response_options=sample_ending_options,\n",
-    "    correct_response_indices=sample_labels\n",
+    "    correct_response_indices=sample_labels,\n",
     ")\n",
     "\n",
     "# OpenAI Chat\n",
     "openai_chat_experiment = OpenAIChatExperiment(\n",
-    "    [\"gpt-3.5-turbo\"],\n",
-    "    [\n",
-    "        [{\"role\": \"system\", \"content\": c}]\n",
-    "        for c in sample_ctxs\n",
-    "    ],\n",
-    "    temperature=temperatures\n",
+    "    [\"gpt-3.5-turbo\"], [[{\"role\": \"system\", \"content\": c}] for c in sample_ctxs], temperature=temperatures\n",
     ")\n",
     "benchmarking_openai_chat = Benchmark(\n",
     "    experiment=openai_chat_experiment,\n",
@@ -356,9 +349,12 @@
     }
    ],
    "source": [
-    "print(pd.DataFrame(\n",
-    "    data=[[google_flan_t5_xxl_results, vicuna7b_results, vicuna13b_results, openai_chat_results]],\n",
-    "    columns=[\"google_flan_t5_xxl\", \"vicuna7b\", \"vicuna13b\", \"openai_chat\"]))"
+    "print(\n",
+    "    pd.DataFrame(\n",
+    "        data=[[google_flan_t5_xxl_results, vicuna7b_results, vicuna13b_results, openai_chat_results]],\n",
+    "        columns=[\"google_flan_t5_xxl\", \"vicuna7b\", \"vicuna13b\", \"openai_chat\"],\n",
+    "    )\n",
+    ")"
    ]
   }
  ],
