--- a/examples/notebooks/image_experiments/StableDiffusion.ipynb
+++ b/examples/notebooks/image_experiments/StableDiffusion.ipynb
@@ -34,7 +34,7 @@
    ],
    "source": [
     "from prompttools.experiment import StableDiffusionExperiment\n",
-    "from prompttools.utils.similarity import ssim"
+    "from prompttools.utils.similarity import structural_similarity"
    ]
   },
   {
@@ -185,7 +185,7 @@
     "\n",
     "experiment.evaluate(\n",
     "    \"ssim_score\",\n",
-    "    ssim,\n",
+    "    structural_similarity,\n",
     "    expected=compare_images_paths,\n",
     "    image_experiment=True\n",
     ")\n",
@@ -210,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.4"
   },
   "vscode": {
    "interpreter": {
