Updating README examples

--- a/examples/notebooks/ReplicateExperiment.ipynb
+++ b/examples/notebooks/ReplicateExperiment.ipynb
@@ -206,7 +206,7 @@
    "id": "bebb8023",
    "metadata": {},
    "source": [
-    "This will be updated once we add image evaluation functions. Please don't hesitate to open an issue if you have any suggestions. Stay tuned."
+    "This will be updated with structural similarity evaluation. Please don't hesitate to open an issue if you have any suggestions. Stay tuned."
    ]
   },
   {
