Adding Qdrant to import path and documentation

--- a/examples/notebooks/QdrantExperiment.ipynb
+++ b/examples/notebooks/QdrantExperiment.ipynb
@@ -199,7 +199,7 @@
    },
    "outputs": [],
    "source": [
-    "from prompttools.experiment.experiments.qdrant_experiment import QdrantExperiment\n",
+    "from prompttools.experiment import QdrantExperiment\n",
     "\n",
     "\n",
     "experiment = QdrantExperiment.initialize(test_parameters=test_parameters, frozen_parameters=frozen_parameters)\n",
