--- a/examples/notebooks/OpenAIChatFunctionExperiment.ipynb
+++ b/examples/notebooks/OpenAIChatFunctionExperiment.ipynb
@@ -98,7 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "models = [\"gpt-3.5-turbo\", \"gpt-3.5-turbo-0613\"]\n",
+    "models = [\"gpt-3.5-turbo\", \"gpt-3.5-turbo-0613\"]  # You can also use a fine-tuned model here, e.g. [\"ft:gpt-3.5-turbo:org_id\"]\n",
     "messages = [\n",
     "    [\n",
     "        {\"role\": \"system\", \"content\": \"You are a helpful assistant.\"},\n",
