Updating Azure experiment example to include Chat completion use case

--- a/examples/notebooks/AzureOpenAIServiceExperiment.ipynb
+++ b/examples/notebooks/AzureOpenAIServiceExperiment.ipynb
@@ -5,7 +5,7 @@
    "id": "0a13ddc8",
    "metadata": {},
    "source": [
-    "# Azure OpenAI Completion Experiment Example"
+    "# Azure OpenAI Experiment Example"
    ]
   },
   {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "ed4e635e",
    "metadata": {},
    "outputs": [],
@@ -77,12 +77,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "beaa70a1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from prompttools.experiment import OpenAICompletionExperiment"
+    "from prompttools.experiment import OpenAICompletionExperiment, OpenAIChatExperiment"
    ]
   },
   {
@@ -102,7 +102,17 @@
     "- Pass the names of your deployed models into the `models` parameter\n",
     "- Create a dictionary to specify your Azure OpenAI configs, which include 1) link to your end point, 2) API Type (\"azure\"), and 3) API version\n",
     "\n",
-    "Everything else should be the same and you can test over different prompts and parameters as usual."
+    "Everything else should be the same and you can test over different prompts and parameters as usual.\n",
+    "\n",
+    "Note: If you do not have an Azure OpenAI Endpoint and deployment set up, you should first follow Azure's official instruction to do so."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2e51d6c",
+   "metadata": {},
+   "source": [
+    "#### In the first example, we will show you how to use Azure with `OpenAICompletionExperiment`.  This is for text completion."
    ]
   },
   {
@@ -221,6 +231,145 @@
        "1  0.810754  \n",
        "2  0.617487  \n",
        "3  0.704616  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "experiment.run()\n",
+    "experiment.visualize()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9384ab39",
+   "metadata": {},
+   "source": [
+    "#### In the second example, we will show you how to use Azure with `OpenAIChatExperiment`. This is for chat completion."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "4cf5897b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# You can test multiple deployed models here, use their deployment names on Azure\n",
+    "models = [\"REPLACE_WITH_YOUR_DEPLOYMENT_NAME\", \"DEPLOYMENT2\"]\n",
+    "messages = [\n",
+    "    [\n",
+    "        {\"role\": \"system\", \"content\": \"You are a helpful assistant.\"},\n",
+    "        {\"role\": \"user\", \"content\": \"Who was the first president?\"},\n",
+    "    ],\n",
+    "    [\n",
+    "        {\"role\": \"system\", \"content\": \"You are a creative copywriter.\"},\n",
+    "        {\"role\": \"user\", \"content\": \"Write a tagline for an ice cream shop.\"},\n",
+    "    ],\n",
+    "]\n",
+    "\n",
+    "azure_openai_service_configs = {\"AZURE_OPENAI_ENDPOINT\": \"https://YOURENDPOINTNAME.openai.azure.com/\",\n",
+    "                                \"API_TYPE\": \"azure\",\n",
+    "                                \"API_VERSION\": \"2023-05-15\"}  # Specify which API version to use\n",
+    "temperatures = [0.0, 1.0]\n",
+    "# You can add more parameters that you'd like to test here.\n",
+    "\n",
+    "experiment = OpenAIChatExperiment(models, messages, temperature=temperatures,\n",
+    "                                  azure_openai_service_configs=azure_openai_service_configs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6eab3877",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>temperature</th>\n",
+       "      <th>messages</th>\n",
+       "      <th>response</th>\n",
+       "      <th>latency</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>[{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who was the first president?'}]</td>\n",
+       "      <td>The first president of the United States was George Washington.</td>\n",
+       "      <td>0.903520</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>[{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who was the first president?'}]</td>\n",
+       "      <td>The first president of the United States was George Washington. He served as president from 1789 to 1797.</td>\n",
+       "      <td>0.815370</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>[{'role': 'system', 'content': 'You are a creative copywriter.'}, {'role': 'user', 'content': 'Write a tagline for an ice cream shop.'}]</td>\n",
+       "      <td>\"Scoops of happiness in every cone!\"</td>\n",
+       "      <td>0.517402</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>[{'role': 'system', 'content': 'You are a creative copywriter.'}, {'role': 'user', 'content': 'Write a tagline for an ice cream shop.'}]</td>\n",
+       "      <td>\"Scoops of happiness in every cone.\"</td>\n",
+       "      <td>0.508131</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   temperature  \\\n",
+       "0  0.0           \n",
+       "1  1.0           \n",
+       "2  0.0           \n",
+       "3  1.0           \n",
+       "\n",
+       "                                                                                                                                   messages  \\\n",
+       "0  [{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who was the first president?'}]               \n",
+       "1  [{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who was the first president?'}]               \n",
+       "2  [{'role': 'system', 'content': 'You are a creative copywriter.'}, {'role': 'user', 'content': 'Write a tagline for an ice cream shop.'}]   \n",
+       "3  [{'role': 'system', 'content': 'You are a creative copywriter.'}, {'role': 'user', 'content': 'Write a tagline for an ice cream shop.'}]   \n",
+       "\n",
+       "                                                                                                    response  \\\n",
+       "0  The first president of the United States was George Washington.                                             \n",
+       "1  The first president of the United States was George Washington. He served as president from 1789 to 1797.   \n",
+       "2  \"Scoops of happiness in every cone!\"                                                                        \n",
+       "3  \"Scoops of happiness in every cone.\"                                                                        \n",
+       "\n",
+       "    latency  \n",
+       "0  0.903520  \n",
+       "1  0.815370  \n",
+       "2  0.517402  \n",
+       "3  0.508131  "
       ]
      },
      "metadata": {},
